added css grid to discover page

--- a/discover.html
+++ b/discover.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/discover/discover.css">
+    <link rel="stylesheet" href="/assets/styles/discover.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Activities | Japan</title>
+    <title>Discover | Japan</title>
 </head>
 
 <body>
@@ -40,6 +40,23 @@
         <h1 class="header_title">Discover Japan</h1>
     </header>
 
+    <section class="destination_section">
+        <div class="destination_labels">
+            <h2 class="section_title">Top Destinations</h2>
+            <p class="section_subtext">Explore The Best Experiences In Japan</p>
+        </div>
+
+        <div class="destination_wrapper">
+            <div class="destination_post post-one"></div>
+            <div class="destination_post post-two"></div>
+            <div class="destination_post post-three"></div>
+            <div class="destination_post post-four"></div>
+            <div class="destination_post post-five"></div>
+            <div class="destination_post post-six"></div>
+            <div class="destination_post post-seven"></div>
+        </div>
+    </section>
+
     <section class="filler"></section>
     
     <section class="contact_section-wrapper">
@@ -68,7 +85,7 @@
         <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
     </footer>
     
-    <script src="/discover/discover.js"></script>
+    <script src="/assets/scripts/discover.js"></script>
 </body>
 
 </html>
