--- a/food.html
+++ b/food.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./food/food.css">
+    <link rel="stylesheet" href="./assets/styles/food.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -69,7 +69,7 @@
         <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
     </footer>
 
-    <script src="./food/food.js"></script>
+    <script src="./assets/scripts/food.js"></script>
 </body>
 
 </html>
