created the activites section scaffold

--- a/discover.html
+++ b/discover.html
@@ -57,6 +57,21 @@
         </div>
     </section>
 
+    <section class="activities_section">
+            <div class="activities_labels">
+                <h2 class="section_title">Top Activities</h2>
+                <p class="section_subtext">The Best Things To Do In Japan</p>
+            </div>
+    
+            <div class="activities_wrapper">
+                <div class="activities_post activity-one"></div>
+                <div class="activities_post activity-two"></div>
+                <div class="activities_post activity-three"></div>
+                <div class="activities_post activity-four"></div>
+                <div class="activities_post activity-five"></div>
+            </div>
+        </section>
+
     <section class="filler"></section>
     
     <section class="contact_section-wrapper">
