added images and found content via lonely planet:

--- a/discover.html
+++ b/discover.html
@@ -58,19 +58,34 @@
     </section>
 
     <section class="activities_section">
-            <div class="activities_labels">
-                <h2 class="section_title">Top Activities</h2>
-                <p class="section_subtext">The Best Things To Do In Japan</p>
-            </div>
-    
-            <div class="activities_wrapper">
-                <div class="activities_post activity-one"></div>
-                <div class="activities_post activity-two"></div>
-                <div class="activities_post activity-three"></div>
-                <div class="activities_post activity-four"></div>
-                <div class="activities_post activity-five"></div>
-            </div>
-        </section>
+        <div class="activities_labels">
+            <h2 class="section_title">Top Activities</h2>
+            <p class="section_subtext">The Best Things To Do In Japan</p>
+        </div>
+
+        <div class="activities_wrapper">
+            <div class="activities_post activity-one"></div>
+            <div class="activities_post activity-two"></div>
+            <div class="activities_post activity-three"></div>
+            <div class="activities_post activity-four"></div>
+            <div class="activities_post activity-five"></div>
+        </div>
+    </section>
+
+    <section class="resturants_section">
+        <div class="resturants_labels">
+            <h2 class="section_title">Top Resturants</h2>
+            <p class="section_subtext">The Best Places To Eat In Japan</p>
+        </div>
+
+        <div class="resturants_wrapper">
+            <div class="resturants_post resturant-one"></div>
+            <div class="resturants_post resturant-two"></div>
+            <div class="resturants_post resturant-three"></div>
+            <div class="resturants_post resturant-four"></div>
+            <div class="resturants_post resturant-five"></div>
+        </div>
+    </section>
 
     <section class="filler"></section>
     
