added images and content to discover page and assets folder

--- a/food.html
+++ b/food.html
@@ -41,6 +41,21 @@
         <p class="header_description">Explore New Foods &amp; Amazing Japanese Resturants</p>
     </header>
 
+    <section class="resturants_section">
+        <div class="resturants_labels">
+            <h2 class="section_title">Top Resturants</h2>
+            <p class="section_subtext">The Best Places To Eat In Japan</p>
+        </div>
+
+        <div class="resturants_wrapper">
+            <div class="resturants_post resturant-one"></div>
+            <div class="resturants_post resturant-two"></div>
+            <div class="resturants_post resturant-three"></div>
+            <div class="resturants_post resturant-four"></div>
+            <div class="resturants_post resturant-five"></div>
+        </div>
+    </section>
+
     <section class="filler"></section>
     
     <section class="contact_section-wrapper">
