added more photos for discover page and added my titles to images

--- a/discover.html
+++ b/discover.html
@@ -46,13 +46,41 @@
         </div>
 
         <div class="destination_wrapper">
-            <div class="destination_post post-one"></div>
-            <div class="destination_post post-two"></div>
-            <div class="destination_post post-three"></div>
-            <div class="destination_post post-four"></div>
-            <div class="destination_post post-five"></div>
-            <div class="destination_post post-six"></div>
-            <div class="destination_post post-seven"></div>
+            <div class="destination_post post-one">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Kyoto</h2>
+                </div>
+            </div>
+            <div class="destination_post post-two">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Tokyo</h2>
+                </div>
+            </div>
+            <div class="destination_post post-three">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Mt Fuji</h2>
+                </div>
+            </div>
+            <div class="destination_post post-four">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Hiroshima</h2>
+                </div>
+            </div>
+            <div class="destination_post post-five">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Hokkaido</h2>
+                </div>
+            </div>
+            <div class="destination_post post-six">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Shikoku</h2>
+                </div>
+            </div>
+            <div class="destination_post post-seven">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -63,11 +91,31 @@
         </div>
 
         <div class="activities_wrapper">
-            <div class="activities_post activity-one"></div>
-            <div class="activities_post activity-two"></div>
-            <div class="activities_post activity-three"></div>
-            <div class="activities_post activity-four"></div>
-            <div class="activities_post activity-five"></div>
+            <div class="activities_post activity-one">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="activities_post activity-two">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="activities_post activity-three">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="activities_post activity-four">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="activities_post activity-five">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -78,11 +126,31 @@
         </div>
 
         <div class="resturants_wrapper">
-            <div class="resturants_post resturant-one"></div>
-            <div class="resturants_post resturant-two"></div>
-            <div class="resturants_post resturant-three"></div>
-            <div class="resturants_post resturant-four"></div>
-            <div class="resturants_post resturant-five"></div>
+            <div class="resturants_post resturant-one">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="resturants_post resturant-two">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="resturants_post resturant-three">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="resturants_post resturant-four">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="resturants_post resturant-five">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
         </div>
     </section>
     
