added divider and nightlife section

--- a/discover.html
+++ b/discover.html
@@ -119,6 +119,13 @@
         </div>
     </section>
 
+
+    <div class="divider_labels">
+        <h2 class="section_title">Stay Connected</h2>
+        <p class="section_subtext">Keep up with the adventure!</p>
+    </div>
+    <section class="divider_section"></section>
+
     <section class="resturants_section">
         <div class="resturants_labels">
             <h2 class="section_title">Top Resturants</h2>
@@ -147,6 +154,41 @@
                 </div>
             </div>
             <div class="resturants_post resturant-five">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="nightlife_section">
+        <div class="nightlife_labels">
+            <h2 class="section_title">Top Resturants</h2>
+            <p class="section_subtext">The Best Places To Eat In Japan</p>
+        </div>
+
+        <div class="nightlife_wrapper">
+            <div class="nightlife_post nightlife-one">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="nightlife_post nightlife-two">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="nightlife_post nightlife-three">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="nightlife_post nightlife-four">
+                <div class="content-wrapper">
+                    <h2 class="destination_title">Yakushima</h2>
+                </div>
+            </div>
+            <div class="nightlife_post nightlife-five">
                 <div class="content-wrapper">
                     <h2 class="destination_title">Yakushima</h2>
                 </div>
