addeed styles to discover page

--- a/discover.html
+++ b/discover.html
@@ -119,12 +119,12 @@
         </div>
     </section>
 
-
-    <div class="divider_labels">
-        <h2 class="section_title">Stay Connected</h2>
-        <p class="section_subtext">Keep up with the adventure!</p>
-    </div>
-    <section class="divider_section"></section>
+    <section class="divider_section">
+        <div class="divider_content">
+            <h2 class="divider_title">Stay Connected To With All Things Japan</h2>
+            <a class="divider_button" href="/subscribe.html">Subscribe To Our Newsletter</a>
+        </div>
+    </section>
 
     <section class="resturants_section">
         <div class="resturants_labels">
