--- a/discover.html
+++ b/discover.html
@@ -121,7 +121,7 @@
 
     <section class="divider_section">
         <div class="divider_content">
-            <h2 class="divider_title">Stay Connected To With All Things Japan</h2>
+            <h2 class="divider_title">Stay Connected With All Things Japan</h2>
             <a class="divider_button" href="/subscribe.html">Subscribe To Our Newsletter</a>
         </div>
     </section>
