--- a/discover.html
+++ b/discover.html
@@ -40,82 +40,117 @@
     </header>
 
     <section class="destination_section">
-        <div class="destination_labels">
+        <div class="section_labels">
             <h2 class="section_title">Top Destinations</h2>
             <p class="section_subtext">Explore The Best Experiences In Japan</p>
         </div>
 
         <div class="destination_wrapper">
-            <div class="destination_post post-one">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Kyoto</h2>
+            <a class="main_destination-link" href="#">
+                <div class="destination_post destination_one">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Kyoto</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="destination_post post-two">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Tokyo</h2>
+            </a>
+
+            <a class="destination_link" href="#">
+                <div class="destination_post destination_two">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Tokyo</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="destination_post post-three">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Mt Fuji</h2>
+            </a>
+
+            <a class="destination_link" href="#">
+                <div class="destination_post destination_three">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Mt Fuji</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="destination_post post-four">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Hiroshima</h2>
+            </a>
+
+            <a class="destination_link" href="#">
+                <div class="destination_post destination_four">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Hiroshima</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="destination_post post-five">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Hokkaido</h2>
+            </a>
+
+            <a class="destination_link" href="#">
+                <div class="destination_post destination_five">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Hokkaido</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="destination_post post-six">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Shikoku</h2>
+            </a>
+
+            <a class="destination_link" href="#">
+                <div class="destination_post destination_six">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Shikoku</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="destination_post post-seven">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
+            </a>
+
+            <a class="destination_link" href="#">
+                <div class="destination_post destination_seven">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Yakushima</h2>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
     </section>
 
     <section class="activities_section">
-        <div class="activities_labels">
+        <div class="section_labels">
             <h2 class="section_title">Top Activities</h2>
             <p class="section_subtext">The Best Things To Do In Japan</p>
         </div>
 
         <div class="activities_wrapper">
-            <div class="activities_post activity-one">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
+            <a class="main_activity-link" href="#">
+                <div class="activities_post activity_one">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Yakushima</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="activities_post activity-two">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
+            </a>
+
+            <a class="activity_link" href="#">
+                <div class="activities_post activity_two">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Yakushima</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="activities_post activity-three">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
+            </a>
+
+            <a class="activity_link" href="#">
+                <div class="activities_post activity_three">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Yakushima</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="activities_post activity-four">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
+            </a>
+
+            <a class="activity_link" href="#">
+                <div class="activities_post activity_four">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Yakushima</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="activities_post activity-five">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
+            </a>
+
+            <a class="activity_link" href="#">
+                <div class="activities_post activity_five">
+                    <div class="content_wrapper">
+                        <h2 class="destination_title">Yakushima</h2>
+                    </div>
                 </div>
-            </div>
+            </a>
+
         </div>
     </section>
 
