added some new classes make titles pop

--- a/discover.html
+++ b/discover.html
@@ -46,58 +46,58 @@
         </div>
 
         <div class="destination_wrapper">
-            <a class="main_destination-link" href="#">
+            <a class="main_destination-link" href="https://www.lonelyplanet.com/japan/kansai/kyoto" target="_blank">
                 <div class="destination_post destination_one">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Kyoto</h2>
+                        <h2 class="post_title destination_title">Kyoto</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="destination_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/tokyo" target="_blank">
                 <div class="destination_post destination_two">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Tokyo</h2>
+                        <h2 class="post_title destination_title">Tokyo</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="destination_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/west-of-tokyo/mt-fuji" target="_blank">
                 <div class="destination_post destination_three">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Mt Fuji</h2>
+                        <h2 class="post_title destination_title">Mt Fuji</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="destination_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/hiroshima" target="_blank">
                 <div class="destination_post destination_four">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Hiroshima</h2>
+                        <h2 class="post_title destination_title">Hiroshima</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="destination_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/hokkaido" target="_blank"> 
                 <div class="destination_post destination_five">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Hokkaido</h2>
+                        <h2 class="post_title destination_title">Hokkaido</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="destination_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/shikoku" target="_blank">
                 <div class="destination_post destination_six">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Shikoku</h2>
+                        <h2 class="post_title destination_title">Shikoku</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="destination_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/okinawa-and-the-southwest-islands/yakushima" target="_blank">
                 <div class="destination_post destination_seven">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Yakushima</h2>
+                        <h2 class="post_title">Yakushima</h2>
                     </div>
                 </div>
             </a>
@@ -111,42 +111,42 @@
         </div>
 
         <div class="activities_wrapper">
-            <a class="main_activity-link" href="#">
+            <a class="main_activity-link" href="https://www.lonelyplanet.com/japan/activities/nikko-national-park-day-trip-from-tokyo/a/pa-act/v-2142TYO_F300_F308/356635" target="_blank">
                 <div class="activities_post activity_one">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Yakushima</h2>
+                        <h2 class="post_title">Nikko National Park Day Trip from Tokyo</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="activity_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/activities/mt-fuji-day-trip-with-lake-ashi-sightseeing-cruise-from-tokyo/a/pa-act/v-2142TYO_F880_F830/356635" target="_blank">
                 <div class="activities_post activity_two">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Yakushima</h2>
+                        <h2 class="post_title">Mt Fuji Day Trip with Lake Ashi Sightseeing Cruise from Tokyo</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="activity_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/activities/tokyo-sumo-wrestling-tournament/a/pa-act/v-2142TYO_F550/356635" target="_blank">
                 <div class="activities_post activity_three">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Yakushima</h2>
+                        <h2 class="post_title">Tokyo Sumo Wrestling Tournament</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="activity_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/activities/tokyo-by-night-japanese-food-tour/a/pa-act/v-5263JPUC/356635" target="_blank">
                 <div class="activities_post activity_four">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Yakushima</h2>
+                        <h2 class="post_title">Tokyo by Night: Japanese Food Tour</h2>
                     </div>
                 </div>
             </a>
 
-            <a class="activity_link" href="#">
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/activities/tokyo-tower-tea-ceremony-and-sumida-river-cruise-day-tour/a/pa-act/v-2142TYO_A100/356635" target="_blank">
                 <div class="activities_post activity_five">
                     <div class="content_wrapper">
-                        <h2 class="destination_title">Yakushima</h2>
+                        <h2 class="post_title">Tokyo Tower, Tea Ceremony and Sumida River Cruise Day Tour</h2>
                     </div>
                 </div>
             </a>
