added content to discover

--- a/discover.html
+++ b/discover.html
@@ -154,80 +154,59 @@
         </div>
     </section>
 
+    <section class="restaurants_section">
+        <div class="section_labels">
+            <h2 class="section_title">Top Resturants</h2>
+            <p class="section_subtext">The Best Places To Eat In Japan</p>
+        </div>
+
+        <div class="restaurants_wrapper">
+            <a class="main_restaurant-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/sushi-dai/a/poi-eat/1608366/356635" target="_blank">
+                <div class="restaurants_post restaurant-one">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Sushi Dai</h2>
+                    </div>
+                </div>
+            </a>
+
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/karatsu/restaurants/kawashima-tofu/a/poi-eat/1233144/356635" target="_blank">
+                <div class="restaurants_post restaurant-two">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Kawashima Tōfu</h2>
+                    </div>
+                </div>
+            </a>
+
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/inua/a/poi-eat/1607497/356635" target="_blank">
+                <div class="restaurants_post restaurant-three">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Inua</h2>
+                    </div>
+                </div>
+            </a>
+
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/kikunoi/a/poi-eat/1313757/356635" target="_blank">
+                <div class="restaurants_post restaurant-four">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Kikunoi</h2>
+                    </div>
+                </div>
+            </a>
+
+            <a class="post_link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/tofuya-ukai/a/poi-eat/1109409/356635" target="_blank">
+                <div class="restaurants_post restaurant-five">
+                    <div class="content_wrapper">
+                        <h2 class="post_title restaurant_title">Tofuya-Ukai</h2>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </section>
+
     <section class="divider_section">
         <div class="divider_content">
             <h2 class="divider_title">Stay Connected With All Things Japan</h2>
             <a class="divider_button" href="/subscribe.html">Subscribe To Our Newsletter</a>
-        </div>
-    </section>
-
-    <section class="resturants_section">
-        <div class="resturants_labels">
-            <h2 class="section_title">Top Resturants</h2>
-            <p class="section_subtext">The Best Places To Eat In Japan</p>
-        </div>
-
-        <div class="resturants_wrapper">
-            <div class="resturants_post resturant-one">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
-            <div class="resturants_post resturant-two">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
-            <div class="resturants_post resturant-three">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
-            <div class="resturants_post resturant-four">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
-            <div class="resturants_post resturant-five">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="nightlife_section">
-        <div class="nightlife_labels">
-            <h2 class="section_title">Top Resturants</h2>
-            <p class="section_subtext">The Best Places To Eat In Japan</p>
-        </div>
-
-        <div class="nightlife_wrapper">
-            <div class="nightlife_post nightlife-one">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
-            <div class="nightlife_post nightlife-two">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
-            <div class="nightlife_post nightlife-three">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
-            <div class="nightlife_post nightlife-four">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
-            <div class="nightlife_post nightlife-five">
-                <div class="content-wrapper">
-                    <h2 class="destination_title">Yakushima</h2>
-                </div>
-            </div>
         </div>
     </section>
     
