added styles to media query that has grid changle layout at 1200px width

--- a/discover.html
+++ b/discover.html
@@ -55,7 +55,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/tokyo" target="_blank">
+                <a class="post_link destination_two-link" href="https://www.lonelyplanet.com/japan/tokyo" target="_blank">
                     <div class="destination_post destination_two">
                         <div class="content_wrapper">
                             <h2 class="post_title destination_title">Tokyo</h2>
@@ -63,7 +63,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/west-of-tokyo/mt-fuji" target="_blank">
+                <a class="post_link destination_three-link" href="https://www.lonelyplanet.com/japan/west-of-tokyo/mt-fuji" target="_blank">
                     <div class="destination_post destination_three">
                         <div class="content_wrapper">
                             <h2 class="post_title destination_title">Mt Fuji</h2>
@@ -71,7 +71,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/hiroshima" target="_blank">
+                <a class="post_link destination_four-link" href="https://www.lonelyplanet.com/japan/hiroshima" target="_blank">
                     <div class="destination_post destination_four">
                         <div class="content_wrapper">
                             <h2 class="post_title destination_title">Hiroshima</h2>
@@ -79,7 +79,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/hokkaido" target="_blank"> 
+                <a class="post_link destination_five-link" href="https://www.lonelyplanet.com/japan/hokkaido" target="_blank"> 
                     <div class="destination_post destination_five">
                         <div class="content_wrapper">
                             <h2 class="post_title destination_title">Hokkaido</h2>
@@ -87,7 +87,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/shikoku" target="_blank">
+                <a class="post_link destination_six-link" href="https://www.lonelyplanet.com/japan/shikoku" target="_blank">
                     <div class="destination_post destination_six">
                         <div class="content_wrapper">
                             <h2 class="post_title destination_title">Shikoku</h2>
@@ -95,7 +95,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/okinawa-and-the-southwest-islands/yakushima" target="_blank">
+                <a class="post_link destination_seven-link" href="https://www.lonelyplanet.com/japan/okinawa-and-the-southwest-islands/yakushima" target="_blank">
                     <div class="destination_post destination_seven">
                         <div class="content_wrapper">
                             <h2 class="post_title">Yakushima</h2>
@@ -120,7 +120,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/activities/mt-fuji-day-trip-with-lake-ashi-sightseeing-cruise-from-tokyo/a/pa-act/v-2142TYO_F880_F830/356635" target="_blank">
+                <a class="post_link activity_two-link" href="https://www.lonelyplanet.com/japan/activities/mt-fuji-day-trip-with-lake-ashi-sightseeing-cruise-from-tokyo/a/pa-act/v-2142TYO_F880_F830/356635" target="_blank">
                     <div class="activities_post activity_two">
                         <div class="content_wrapper">
                             <h2 class="post_title">Mt Fuji Day Trip with Lake Ashi Sightseeing Cruise from Tokyo</h2>
@@ -128,7 +128,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/activities/tokyo-sumo-wrestling-tournament/a/pa-act/v-2142TYO_F550/356635" target="_blank">
+                <a class="post_link activity_three-link" href="https://www.lonelyplanet.com/japan/activities/tokyo-sumo-wrestling-tournament/a/pa-act/v-2142TYO_F550/356635" target="_blank">
                     <div class="activities_post activity_three">
                         <div class="content_wrapper">
                             <h2 class="post_title">Tokyo Sumo Wrestling Tournament</h2>
@@ -136,7 +136,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/activities/tokyo-by-night-japanese-food-tour/a/pa-act/v-5263JPUC/356635" target="_blank">
+                <a class="post_link activity_four-link" href="https://www.lonelyplanet.com/japan/activities/tokyo-by-night-japanese-food-tour/a/pa-act/v-5263JPUC/356635" target="_blank">
                     <div class="activities_post activity_four">
                         <div class="content_wrapper">
                             <h2 class="post_title">Tokyo by Night: Japanese Food Tour</h2>
@@ -144,7 +144,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/activities/tokyo-tower-tea-ceremony-and-sumida-river-cruise-day-tour/a/pa-act/v-2142TYO_A100/356635" target="_blank">
+                <a class="post_link activity_five-link" href="https://www.lonelyplanet.com/japan/activities/tokyo-tower-tea-ceremony-and-sumida-river-cruise-day-tour/a/pa-act/v-2142TYO_A100/356635" target="_blank">
                     <div class="activities_post activity_five">
                         <div class="content_wrapper">
                             <h2 class="post_title">Tokyo Tower, Tea Ceremony and Sumida River Cruise Day Tour</h2>
@@ -170,7 +170,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/karatsu/restaurants/kawashima-tofu/a/poi-eat/1233144/356635" target="_blank">
+                <a class="post_link restaurant_two-link " href="https://www.lonelyplanet.com/japan/karatsu/restaurants/kawashima-tofu/a/poi-eat/1233144/356635" target="_blank">
                     <div class="restaurants_post restaurant-two">
                         <div class="content_wrapper">
                             <h2 class="post_title restaurant_title">Kawashima Tōfu</h2>
@@ -178,7 +178,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/inua/a/poi-eat/1607497/356635" target="_blank">
+                <a class="post_link restaurant_three-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/inua/a/poi-eat/1607497/356635" target="_blank">
                     <div class="restaurants_post restaurant-three">
                         <div class="content_wrapper">
                             <h2 class="post_title restaurant_title">Inua</h2>
@@ -186,7 +186,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/kikunoi/a/poi-eat/1313757/356635" target="_blank">
+                <a class="post_link restaurant_four-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/kikunoi/a/poi-eat/1313757/356635" target="_blank">
                     <div class="restaurants_post restaurant-four">
                         <div class="content_wrapper">
                             <h2 class="post_title restaurant_title">Kikunoi</h2>
@@ -194,7 +194,7 @@
                     </div>
                 </a>
 
-                <a class="post_link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/tofuya-ukai/a/poi-eat/1109409/356635" target="_blank">
+                <a class="post_link restaurant_five-link" href="https://www.lonelyplanet.com/japan/tokyo/restaurants/tofuya-ukai/a/poi-eat/1109409/356635" target="_blank">
                     <div class="restaurants_post restaurant-five">
                         <div class="content_wrapper">
                             <h2 class="post_title restaurant_title">Tofuya-Ukai</h2>
